swagger annotation update
