# handlers/user_handler.go
@@ -8,12 +8,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary add user
-// @Description add new user
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param question body models.User true "Tag object"
+// @Param user body models.User true "Tag object"
 // @Success 201 {object} models.User
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
@@ -34,12 +32,10 @@ func AddUser(c *gin.Context) {
 	c.IndentedJSON(http.StatusCreated, user)
 }
 
-// @Summary delete user
-// @Description delete a user
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param question body models.User true "Tag object"
+// @Param user body models.User true "Tag object"
 // @Success 201 {object} models.User
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
